# slipmux

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: checksum.rs  decoder.rs  decoder_no_std.rs  encode.rs  framehandler.rs  lib.rs
