[package]
authors = ["Bennet Hattesen <bennet.hattesen@haw-hamburg.de>"]
edition = "2024"
description = "Slipmux de- and encoding"
homepage = "https://github.com/teufelchen1/slipmux"
license = "MIT OR Apache-2.0"
name = "slipmux"
readme = "README.md"
repository = "https://github.com/teufelchen1/slipmux"
version = "0.1.0"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
let_underscore_untyped = "warn"
str_to_string = "warn"

cast_possible_truncation = "allow"
option-if-let-else = "allow"
single_match_else = "allow"

[profile.release]
lto = true

[dependencies]
serial-line-ip = "0.5"

[dev-dependencies]
coap-lite = "0.13"